# crfms-final

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/api/: app.py
src/api/routes/: __init__.py  add_ons.py  auth.py  branches.py  health.py  insurance_tiers.py  payments.py  rentals.py  reservations.py  vehicle.py
src/core/: __init__.py  clock_service.py  config.py  database_manager.py  exceptions.py  logging_config.py  pricing_calculator.py  rabbitmq_manager.py
src/domain/branch/: __init__.py  branch.py
src/domain/notification/: __init__.py  notification_manager.py  notification_manager_interface.py  subscriber.py  subscriber_interface.py
src/domain/payment/: __init__.py  concrete_factories.py  concrete_products.py  factory_interface.py  product_interface.py
src/domain/pricing/: __init__.py  concrete_strategies.py  pricing_strategy.py  strategy_interface.py
src/domain/rental/: __init__.py  rental.py
src/domain/reservation/: __init__.py  add_on.py  invoice.py  reservation.py
src/services/: __init__.py  add_on_service.py  auth_service.py  branch_service.py  event_consumer.py  insurance_tier_service.py  payment_service.py  rental_service.py  reservation_service.py  vehicle_service.py
tests/: README.md  conftest.py
tests/test_domain/: test_maintenance_logic.py  test_rental_charges.py  test_reservation_logic.py
tests/test_entities/: test_maintenance_logic.py  test_notification_manager.py  test_pricing_strategies.py  test_rental_flow.py  test_reservation_logic.py
(+75 files in other folders)
