[project]
name = "crfms-2104987"
version = "1.0.0"
description = "Final AIN3005 Project"
requires-python = ">=3.11,<3.12"
readme = "README.md"


# Main dependencies
dependencies = [
    # Core config and typing
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "pydantic_core==2.41.5",

    # RabbitMQ client
    "pika==1.3.2",
    "aio-pika==9.5.8",

    # MongoDB
    "pymongo==4.15.5",
    "motor==3.7.1",

    # HTTP client
    "httpx==0.28.1",

    # Fast API
    "fastapi==0.126.0",
    "uvicorn==0.38.0",

]


# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "mongomock-motor==0.0.36",
    "pytest-cov==7.0.0",
    "black==25.12.0",
    "ruff==0.14.10",
    "pre-commit==4.5.1",
]


[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"
